# skill-assessment-agent

./: .gitignore  PLAN.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  config.py  database.py  main.py  pyproject.toml  render.yaml
backend/app/models/: db_models.py
backend/app/routers/: analyze.py  assess.py  report.py
backend/app/schemas/: entities.py
backend/app/services/: assessment_agent.py  gap_service.py  learning_plan_service.py  parser_service.py
backend/tests/: conftest.py  test_report.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/assess/[sessionId]/: page.tsx
frontend/app/report/[sessionId]/: page.tsx
frontend/lib/: api.ts  types.ts
