[tool.poetry]
name = "skill-assessment-agent"
version = "0.1.0"
description = "AI-powered skill assessment and learning plan agent"
authors = ["Your Name"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
langchain = "^0.3.0"
langchain-groq = "^0.2.0"
langgraph = "^0.2.0"
pdfplumber = "^0.11.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-multipart = "^0.0.12"
sse-starlette = "^2.1.0"
python-dotenv = "^1.0.0"
aiofiles = "^24.0.0"
python-docx = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
